tests/ui/fail/init/invalid-field.rs
l10n::init!({
    format: || {}
});

fn main() {}
